src/objects/JLCL_Program_Data_Import__c.object
<CustomObject>
    <description>Object to be used for importing Program Interest Data.</description>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Field can be used to control the flow of imported data</description>
        <label>Batch Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Download_Date__c</fullName>
        <label>Download Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_Description__c</fullName>
        <label>Import Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Status__c</fullName>
        <label>Import Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>JLCL Program Data Import</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Number__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Program_Name__c</columns>
        <columns>Download_Date__c</columns>
        <columns>Import_Status__c</columns>
        <columns>Import_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Import_Status__c</field>
            <operation>notEqual</operation>
            <value>Success</value>
        </filters>
        <filters>
            <field>Import_Description__c</field>
            <operation>notEqual</operation>
            <value>Error: Email not found</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Items</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Pending Items</label>
    </listViews>
    <nameField>
        <displayFormat>PDI-{0000}</displayFormat>
        <label>JLCL Program Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JLCL Program Data Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>